--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-         "trin4ik/nova-switcher": "^0.3.0"       
+        "laravel/nova": "^4.0",
+        "trin4ik/nova-switcher": "^0.3.0"   
     },
     "autoload": {
         "psr-4": {
